--- a/EECIP/Views/Dashboard/UserCard.cshtml
+++ b/EECIP/Views/Dashboard/UserCard.cshtml
@@ -1,4 +1,4 @@
-﻿
+﻿@using EECIP.App_Logic.DataAccessLayer
 @model EECIP.Models.vmDashboardUserCard
 @{
     ViewBag.Title = Model.User.FNAME + " " + Model.User.LNAME;
@@ -36,26 +36,65 @@
         </div>
     </div>
     <div class="col-lg-4">
-        <h4>Expertise</h4>
-            @foreach (var item in Model.SelectedExpertise)
-            {
-                <span class="select2-selection__choice">@Html.DisplayFor(modelItem => item)</span>
-            }
-        <br/>
+        <section class="panel panel-default" style="margin-top: 40px;">
+            <div class="panel-heading">
+                Expertise
+                <div class="panel-tools">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
+                    </a>
+                </div>
+            </div>
+            <div class="panel-body">
 
-        <br/>
-        <div class="form-group">
-            @Html.CheckBoxFor(model => model.User.NODE_ADMIN, new { @class = "" })
-            <label>Node Administrator</label>
-        </div>
-
-        <br />
+                @foreach (var item in Model.SelectedExpertise)
+                {
+                    <span class="select2-selection__choice">@Html.DisplayFor(modelItem => item)</span>
+                }
+                <br />
+                <br />
+                <div class="form-group">
+                    @Html.CheckBoxFor(model => model.User.NODE_ADMIN, new { @class = "" })
+                    <label>Node Administrator</label>
+                </div>
+                <br />
+            </div>
+        </section>
     </div>
     <div class="col-lg-4">
-        <h4>Badges</h4>
-    </div>
+        <section class="panel panel-default" style="margin-top: 40px;">
+            <div class="panel-heading">
+                Badges Earned
+                <div class="panel-tools">
+                    <a class="btn btn-xs panel-collapse collapses" href="#">
+                    </a>
+                </div>
+            </div>
+            <div class="panel-body">
 
+                <div class="badgeholder">
+                    <div class="publicbadgeline" style="width:100%">
+                        @foreach (UserBadgeDisplay item in Model.UserBadges)
+                        {
+                            <div class="publicbadge col-md-4 col-sm-4 tooltips col-xs-6" data-original-title="@item._Badge.Description">
+                                <img src="/Content/Images/badges/@(item._Badge.Image)" alt="@item._Badge.DisplayName" class="@(item.UserEarnedInd ? "fff" : "grey")">
+                                <p class="publicbadgenamedesc">@item._Badge.DisplayName</p>
+                                <p class="publicbadgeawards" style="color:green"><b>Awarded @(item.EarnedDate.HasValue ? item.EarnedDate.Value.ToShortDateString() : "")</b></p>
+                            </div>
+                        }
+                    </div>
+
+
+                </div>
+
+
+
+
+            </div>
+        </section>
+    </div>
 </div>
+
+
 <div class="row">
     <div class="col-sm-12">
         <h4>Latest Activity</h4>
