--- a/EECIP/Views/Dashboard/Projects.cshtml
+++ b/EECIP/Views/Dashboard/Projects.cshtml
@@ -5,17 +5,20 @@
 }
 @if (User.IsInRole("Admins"))
 {
-    using (Html.BeginForm("RefTags", "Admin", FormMethod.Post, new { @class = "form-horizontal" }))
-    {
-        <div class="form-group">
-            <label class="col-sm-1 control-label" for="form-field-1">
-                Agency:
-            </label>
-            <div class="col-sm-5">
-                @Html.DropDownListFor(model => model.selAgency, Model.ddl_Agencies, "", new { @class = "form-control", @onchange = "document.location.href = '/Dashboard/Projects?selAgency=' + this.options[this.selectedIndex].value;" })
-            </div>
+    <div class="row">
+        <div class="col-sm-12">
+            <form class="form-horizontal">
+                <div class="form-group">
+                    <label class="col-sm-1 control-label" for="form-field-1">
+                        Select Agency:
+                    </label>
+                    <div class="col-sm-5">
+                        @Html.DropDownListFor(model => model.selAgency, Model.ddl_Agencies, "", new { @class = "form-control", @onchange = "document.location.href = '/Dashboard/Projects?selAgency=' + this.options[this.selectedIndex].value;" })
+                    </div>
+                </div>
+            </form>
         </div>
-    }
+    </div>
 }
 <div class="row">
     <div class="col-sm-12">
@@ -89,19 +92,22 @@
                                         }
                                     }
                                 </td>
-                                <td>                                    
+                                <td>
                                     @if (item.PROJECT_URL != null && item.PROJECT_URL.Length > 5)
                                     {
-                                        <a href="@Html.DisplayFor(modelItem => item.PROJECT_URL)" target="_blank" >Project URL</a>
+                                        <a href="@Html.DisplayFor(modelItem => item.PROJECT_URL)" target="_blank">Project URL</a>
                                     }
                                 </td>
                             </tr>
                         }
                     </table>
                 </div>
-                <p>
-                    <a href="@Url.Action("ProjectDetails", "Dashboard", new { orgIDX = Model.selAgency  })" class="btn btn-rounded  btn-rounded btn-success"><i class="glyphicon glyphicon-plus"></i> Add New</a>
-                </p>
+                <br />
+                <div class="row">
+                    <div class="col-md-12">
+                        <a href="@Url.Action("ProjectDetails", "Dashboard", new { orgIDX = Model.selAgency  })" class="btn btn-rounded  btn-rounded btn-success"><i class="glyphicon glyphicon-plus"></i> Add New</a>
+                    </div>
+                </div>
             </div>
         </section>
     </div>
